--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -16,6 +16,9 @@ template(name='nav')
                 .icon.item
                     i.code.icon
             .right.menu
+                .icon.item.add_post
+                    i.plus.icon
+            
                 if unread_count
                     a.item.alerts.select_term(href="#" class=alert_toggle_class)
                         i.bell.icon
