--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -224,7 +224,7 @@ template(name='user_post_small')
                     img.ui.rounded.inline.zoomer.image.zoomer(src=image_link)    
             // |!{content}
             i.grey.eye.icon
-            each view_ids
+            each viewer_ids
                 .ui.label #{this}
             |#{points}
             each tags
