--- a/parts/client/style.css
+++ b/parts/client/style.css
@@ -1,6 +1,6 @@
 body {
   /* font-family: 'Raleway', sans-serif !important; */
-  font-family: 'Ubuntu', sans-serif !important; 
+  /*font-family: 'Ubuntu', sans-serif !important; */
   /* font-family: 'Lato+Mono', sans-serif !important; */
   /* font-family: 'Lato', sans-serif !important; */
   /*font-size: 100% !important; */
@@ -123,7 +123,7 @@ html {
     display:none !important;
 }
 p {
-  font-family: 'Ubuntu', sans-serif !important;
+  /*font-family: 'Ubuntu', sans-serif !important;*/
 
 }
 
@@ -370,7 +370,7 @@ html.ios body {
 
 .card {
     /* background: black !important; */
-    border-radius: 10px !important; 
+    /*border-radius: 10px !important; */
 }
 
 a.goto_article {
@@ -784,7 +784,7 @@ input {
   /*font-family: 'Roboto', sans-serif !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
   /*font-family: 'Lato', sans-serif !important; */
-  font-family: 'Ubuntu', sans-serif !important;
+  /*font-family: 'Ubuntu', sans-serif !important;*/
 }
 
 @keyframes fadein {
