upgrade to meteor 2.0 and add global karma

--- a/parts/client/stats.jade
+++ b/parts/client/stats.jade
@@ -5,6 +5,9 @@ template(name='stats')
                 i.line.chart.icon
                 |stats
             .ui.header 
+                i.yin.yang.icon
+                |#{global_karma} global karma
+            .ui.header 
                 i.chat.icon
                 |#{comment_count} comments
             .ui.header 
