--- a/parts/client/home.jade
+++ b/parts/client/home.jade
@@ -144,7 +144,7 @@ template(name='home')
                     +post_card
 
 template(name='post_card')
-    .ui.card.mark_read(class=card_class)
+    .ui.card.mark_read.penny.add_global_karma(class=card_class)
         if image_link
             a(href="/p/#{_id}/view")
                 img.ui.zoomer.image(src=image_link)
@@ -155,13 +155,14 @@ template(name='post_card')
             +youtube_view key='youtube_id' label='youtube id' direct=true
 
         .content.smallscroll
-            .ui.header #{title}
+            a.ui.header(href="/p/#{_id}/view") #{title}
             div
             i.thumbs.up.link.outline.icon.upvote
             |#{points}
             i.thumbs.down.link.outline.icon.downvote
             |#{when}
-            |!{content}
+            a(href="/p/#{_id}/view")
+                |!{content}
             +voting_full
             // .ui.tiny.icon.input
             //     i.grey.tag.icon
@@ -191,7 +192,7 @@ template(name='post_card')
                                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tertiary.button.zoomer.pick_tag.penny(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tertiary.button.zoomer.pick_tag.penny.add_global_karma(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -200,7 +201,7 @@ template(name='tag_picker')
         //     small #{count}
         
 template(name='unpick_tag')
-    a.unpick_tag.ui.large.black.compact.button.no_blink.penny(href='#')
+    a.unpick_tag.ui.large.black.compact.button.no_blink.penny.add_global_karma(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -210,7 +211,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tiny.button.zoomer.pick_flat_tag.penny(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tiny.button.zoomer.pick_flat_tag.penny.add_global_karma(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
