add session and global points when interacting

--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -22,7 +22,7 @@ template(name='nav')
                 .icon.item
                     i.code.icon
             .right.menu
-                .icon.item.add_post.penny.add_global_karma
+                a.icon.item.add_post.penny.add_global_karma
                     i.plus.icon
             
                 // if unread_count
