--- a/parts/client/style.css
+++ b/parts/client/style.css
@@ -378,7 +378,7 @@ a.goto_article {
 }
 
 .ui.button:not(.circular) { 
-    border-radius: 10px !important; 
+    /*border-radius: 10px !important; */
 }
 .ui.button {
   margin: 2px !important;
@@ -649,12 +649,12 @@ a.title, #title {
 
 .label {
   margin:1px !important;
-  border-radius: 10px !important; 
+  /*border-radius: 10px !important; */
 }
 
 input {
     /*margin: 10px !important;*/
-    border-radius: 10px !important; 
+    /*border-radius: 10px !important; */
 }
 
 ::-webkit-scrollbar {
