combine some logging karma methods and put server log_view methds in lib

--- a/parts/client/home.jade
+++ b/parts/client/home.jade
@@ -1,5 +1,5 @@
 template(name='home')
-    .ui.padded.grid
+    .ui.padded.stackable.grid
         .sixteen.wide.column.scrolling             
             // i.large.clock.icon
             // i.large.thumbs.up.icon
