fix tips, filtered fields on docs pub

--- a/parts/client/home.jade
+++ b/parts/client/home.jade
@@ -185,7 +185,7 @@ template(name='post_card')
                 i.large.lock.link.circular.grey.icon.make_private
             else if in_dev
                 i.large.lock.link.circular.grey.icon.make_private
-            a.ui.icon.large.button(href="/p/#{_id}/view")
+            a.ui.icon.large.basic.circular.button(href="/p/#{_id}/view")
                 |#{views}
                 i.chevron.right.large.icon
                                 
