--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -1,10 +1,10 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.inverted.menu.hscroll
+    .ui.fluid.attached.borderless.inverted.large.menu.hscroll
         // a.icon.item.toggle_sidebar.no_blink
         //     i.bars.icon
     
         a.icon.item.blink.clear.penny.add_global_karma(href="/" class="{{isActiveRoute regex='home'}}")
-            i.yin.yang.icon
+            i.yin.yang.large.icon
         a.icon.item.blink.clear.penny.add_global_karma(href="/stats" class="{{isActiveRoute 'stats'}}")
             i.line.chart.icon
         a.icon.item.blink.clear.penny.add_global_karma(href="/love" class="{{isActiveRoute 'love'}}")
