--- a/parts/client/home.jade
+++ b/parts/client/home.jade
@@ -20,82 +20,89 @@ template(name='home')
             each result_tags
                 // .ui.label #{this}
                 +tag_picker
-        .four.wide.column.scrolling             
-            if location_results.count
-                i.big.marker.icon
-            each picked_locations
-                a.unpick_location.ui.large.compact.button(href='#')
-                    strong #{this}
-            each location_results
-                if name
-                    .ui.tiny.compact.button.pick_location #{name}
-            div
-            i.big.user.icon
-            each picked_authors
-                a.unpick_author.ui.large.compact.button(href='#')
-                    strong #{this}
-            each author_results
-                if name
-                    .ui.tiny.compact.button.pick_author #{name}
-            div
-            i.clock.big.icon
-            each picked_times
-                a.unpick_time.ui.large.large.compact.button(href='#')
-                    strong #{this}
-            each time_results
-                .ui.tiny.compact.button.pick_time #{name}
-            .ui.inline.header 
-                |#{post_counter}
-            // +alpha
-            each picked_locations
-                a.unpick_location_tag.ui.black.large.compact.button(href='#')
-                    | #{this}
-            if location_tags
-                i.big.marker.grey.icon
-                each location_tags
-                    .ui.compact.small.button.zoomer.pick_location_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
-                        | #{name}
-            if Locations
+        if skv_is 'view_sidebar' true
+            .four.wide.column.scrolling       
+                if location_results.count
+                    i.big.marker.icon
+                each picked_locations
+                    a.unpick_location.ui.large.compact.button(href='#')
+                        strong #{this}
+                each location_results
+                    if name
+                        .ui.tiny.compact.basic.button.pick_location #{name}
                 div
-                .ui.small.grey.inline.header
-                    i.marker.grey.icon
-                    |locations
-                each locations
-                    +tag_picker
-                    // .ui.link.label.pick_Location #{name}
-            if HealthConditions
+                i.big.user.icon
+                each picked_authors
+                    a.unpick_author.ui.large.compact.button(href='#')
+                        strong #{this}
+                each author_results
+                    if name
+                        .ui.tiny.compact.basic.button.pick_author #{name}
                 div
-                .ui.small.grey.inline.header
-                    i.doctor.icon
-                    |health conditions
-                each HealthConditions
-                    +tag_picker
-                    // .ui.link.label.pick_healthcondition #{name}
-            if Persons
-                .spacer
-                .ui.small.grey.inline.header
-                    i.user.icon
-                    |people
-                each Persons
-                    +tag_picker
-                    // .ui.label.pick_person #{name}
-            if Organizations
-                .spacer
-                .ui.small.grey.inline.header
-                    i.building.icon
-                    |organizations
-                each Organizations
-                    +tag_picker
-                    // .ui.label.pick_organization #{name}
-            if Companies
-                .ui.small.grey.inline.header
-                    i.building.icon
-                    |companies
-                each companies
-                    .ui.label.pick_company #{name}                        
+                i.clock.big.icon
+                each picked_times
+                    a.unpick_time.ui.large.large.compact.button(href='#')
+                        strong #{this}
+                each time_results
+                    .ui.tiny.compact.basic.button.pick_time #{name}
+                .ui.inline.header 
+                    |#{post_counter}
+                // +alpha
+                each picked_locations
+                    a.unpick_location_tag.ui.black.large.compact.button(href='#')
+                        | #{this}
+                if location_tags
+                    i.big.marker.grey.icon
+                    each location_tags
+                        .ui.compact.small.button.zoomer.pick_location_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+                            | #{name}
+                if Locations
+                    div
+                    .ui.small.grey.inline.header
+                        i.marker.grey.icon
+                        |locations
+                    each locations
+                        +tag_picker
+                        // .ui.link.label.pick_Location #{name}
+                if HealthConditions
+                    div
+                    .ui.small.grey.inline.header
+                        i.doctor.icon
+                        |health conditions
+                    each HealthConditions
+                        +tag_picker
+                        // .ui.link.label.pick_healthcondition #{name}
+                if Persons
+                    .spacer
+                    .ui.small.grey.inline.header
+                        i.user.icon
+                        |people
+                    each Persons
+                        +tag_picker
+                        // .ui.label.pick_person #{name}
+                if Organizations
+                    .spacer
+                    .ui.small.grey.inline.header
+                        i.building.icon
+                        |organizations
+                    each Organizations
+                        +tag_picker
+                        // .ui.label.pick_organization #{name}
+                if Companies
+                    .ui.small.grey.inline.header
+                        i.building.icon
+                        |companies
+                    each companies
+                        .ui.label.pick_company #{name}                        
                                 
-        .twelve.wide.column
+        div(class=main_column_class)
             // .ui.disabled.button shared with me
+            if skv_is 'view_sidebar' false
+                .ui.icon.compact.basic.button.enable_sidebar
+                    i.caret.right.icon
+            else
+                .ui.icon.compact.basic.button.disable_sidebar
+                    i.caret.left.icon
             if skv_is 'sort_direction' 1
                 .ui.icon.compact.basic.button.sort_down
                     i.caret.down.icon
@@ -104,27 +111,21 @@ template(name='home')
                     i.caret.up.icon
             .ui.compact.large.icon.basic.button.sort_created(class=sort_created_class)
                 i.clock.icon
-                // |latest
             .ui.compact.large.icon.basic.button.sort_ups(class=sort_ups_class)
                 i.thumbs.up.icon
-                // |liked
             if skv_is 'view_detail' true
                 .ui.black.large.icon.compact.basic.button.toggle_detail
                     i.list.icon
-                    // |detail
             else
                 .ui.compact.large.icon.basic.button.toggle_detail
                     i.minus.icon
-                    // |simple
                 // i.line.chart.icon
             if skv_is 'view_layout' 'grid'
                 .ui.compact.large.icon.black.basic.button.set_grid(class=grid_class) 
                     i.th.icon
-                    // |grid
             else
                 .ui.compact.large.icon.basic.button.set_grid(class=grid_class) 
                     i.th.icon
-                    // |grid
             if skv_is 'view_layout' 'list'
                 .ui.compact.black.icon.large.basic.button.set_list(class=list_class)
                     i.list.icon
@@ -133,6 +134,10 @@ template(name='home')
                 .ui.compact.large.icon.basic.button.set_list(class=list_class)
                     i.list.icon
                     // |list
+            .ui.circular.icon.basic.button.skip_left
+                i.chevron.left.icon
+            .ui.circular.icon.basic.button.skip_right
+                i.chevron.right.icon
             .ui.icon.button
                 i.film.icon
             .ui.icon.button
